--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,8 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
 github_username:  jennypop
+paginate: 5
+paginate_path: /page:num/
 
 # Build settings
 markdown: kramdown
