--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Jenny Yang
 email: jennyyangdev@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Site still under construction!
-baseurl:
+baseurl: ""
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
 github_username:  jennypop
