--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title: Jenny Yang
 email: jennyyangdev@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Site still under construction!
-baseurl: "https://jennypop.github.io"
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: ""
+url: "https://jennypop.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
 github_username:  jennypop
 paginate: 5
