--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Home
 email: jennyyangdev@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Site still under construction!
+  Jenny Yang's portfolio
 baseurl: ""
 url: "https://jennypop.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
